# diplom

./: .env  README.md  docker-compose.yml  pyproject.toml
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  register.html
booking_app/: forms.py  models.py  urls.py  views.py
booking_app/migrations/: 0001_initial.py  0002_booking_owner.py
booking_app/templates/booking/: about.html  base.html  booking_form.html  home.html
config/: settings.py
