[tool.poetry]
name = "restaraunt"
version = "0.1.0"
description = ""
authors = ["Maxim Poverenov <poverenov.92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
